@@ -1,6 +1,7 @@
 2010-08-09  Romain Francois <romain@r-enthusiasts.com>
 
-	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q lnorm
+	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q (lnorm|weibull), generated
+	by the script
 
 2010-08-06  Douglas Bates  <bates@stat.wisc.edu>
 
